--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
   background: rgb(63,94,251);
 background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(186,69,93,1) 100%);
-  font-family: "Bitter", serif;
+  font-family: "Metal", serif;
 }
 
 * {
