--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,7 @@
 body {
   // background: #e1e7ec;
   background: #dfe7ef;
-  font-family: "Bitter", serif;
+  font-family: "Metal", serif;
 }
 
 * {
